another small fix

--- a/AlternativeMonty2.html
+++ b/AlternativeMonty2.html
@@ -3,12 +3,12 @@
 <script language="JavaScript">
 <!--
 winWidth = 725;
-winHeight = 590;
+winHeight = 600;
 window.resizeTo(winWidth,winHeight);
 window.moveTo(Math.floor((screen.width-winWidth)/2),Math.floor((screen.height-winHeight)/2));
 CarPos=0; cow1Pos=1; cow2Pos=2;
 Mode=FirstChoice=GuessesKeep=KeepWin=KeepLose=GuessesChange=ChangeWin=ChangeLose=TheRandom=RunAutoCycles=0;
-	// Need to initialized other variable
+Total1 = Total2 = Total3 = WithKeep1 = WithKeep2 = WithKeep3 = NSW1 = NSW2 = NSW3 = NSL1 = NSL2 = NSL3 = WithSwitch1 = WithSwitch2 = WithSwitch3 = SW1 = SW2 = SW3 = SL1 = SL2 = SL3 = 0;
 Cheating=false;
 
 // ====================================================================================
