--- a/testUse.html
+++ b/testUse.html
@@ -1,3 +1,7 @@
+tempTotal = tempWithKeep = tempNSW = tempNSL = tempWithSwitch = tempSW = tempSL = 0;
+
+
+
 <html><head>
 <title>The Monty Hall problem</title>
 <script language="JavaScript">
